# abyssal

./: .gitmodules  LICENSE  README.md
.github/workflows/: ci.yml
engine/: Cargo.toml  build.rs
engine/libdwarfs-sys/: Cargo.toml  build.rs  shim.c  wrapper.h
engine/libdwarfs-sys/src/: lib.rs
engine/scripts/: build-libdwarfs.sh
engine/src/: archive.rs  config.rs  crypto.rs  main.rs  service.rs
engine/tests/: engine_integration.rs
manager/: .gitignore  mix.exs
manager/config/: config.exs
manager/lib/abyssal/: application.ex  cli.ex  engine_client.ex
manager/lib/abyssal/crypto/: aes_gcm.ex  key_material.ex  mnemonic.ex  shamir.ex
manager/lib/abyssal/datasets/: compression_policy.ex  manifest.ex  publisher.ex  release_store.ex
manager/lib/abyssal/engine/v1/: engine.pb.ex
manager/lib/abyssal/grpc/: manager_server.ex  zfs_monitor_server.ex
manager/lib/abyssal/v1/: manager.pb.ex
manager/lib/abyssal/zfs_monitor/: cache.ex  collector.ex
manager/lib/zfs_monitor/: zfs_monitor.pb.ex
manager/test/: test_helper.exs
manager/test/abyssal/: engine_client_test.exs
manager/test/abyssal/crypto/: mnemonic_test.exs  shamir_test.exs
manager/test/abyssal/datasets/: compression_policy_test.exs  publisher_test.exs
manager/test/abyssal/grpc/: manager_server_test.exs
proto/abyssal/engine/v1/: engine.proto
proto/abyssal/v1/: manager.proto
